fix buttons on iphone better

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .CardDeck {
   position: relative;
   margin: auto;
-  height: 80%;
+  height: 75%;
 }
 
 .Card {
